Added checks for initial connection to database

--- a/Index.html
+++ b/Index.html
@@ -33,6 +33,25 @@
 		<label class="resp_label" for="1_strAgr">Strongly Agree</label class="resp_label">
 			
 	</div>
+	<div class="question_wrapper" id="2">
+
+		<h3>Question 2: Example question 2</h3>
+		<input class="resp" type="radio" id="2_strDis" name="2" value="-2" />
+		<label class="resp_label" for="2_strDis">Strongly Disagree</label class="resp_label">
+
+		<input class="resp" type="radio" id="2_medDis" name="2" value="-1" />
+		<label class="resp_label" for="2_medDis">Somewhat Disagree</label class="resp_label">
+
+		<input class="resp" type="radio" id="2_neu" name="2" value="0" />
+		<label class="resp_label" for="2_neu">Neutral</label class="resp_label">
+
+		<input class="resp" type="radio" id="2_medAgr" name="2" value="1" />
+		<label class="resp_label" for="2_medAgr">Somewhat Agree</label class="resp_label">
+
+		<input class="resp" type="radio" id="2_strAgr" name="2" value="2" />
+		<label class="resp_label" for="2_strAgr">Strongly Agree</label class="resp_label">
+			
+	</div>
     <button type="submit">Submit</button>
 </form>
 </body>
