Prototype form progression implemented. All frontend libraries consolidated in static/frontend/ which is untracked

--- a/Index.html
+++ b/Index.html
@@ -13,45 +13,6 @@
 </head>
 
 <body>
-<form method="POST">
-	<div class="question_wrapper" id="1">
-
-		<h3>Question 1: Example question</h3>
-		<input class="resp" type="radio" id="1_strDis" name="1" value="-2" />
-		<label class="resp_label" for="1_strDis">Strongly Disagree</label class="resp_label">
-
-		<input class="resp" type="radio" id="1_medDis" name="1" value="-1" />
-		<label class="resp_label" for="1_medDis">Somewhat Disagree</label class="resp_label">
-
-		<input class="resp" type="radio" id="1_neu" name="1" value="0" />
-		<label class="resp_label" for="1_neu">Neutral</label class="resp_label">
-
-		<input class="resp" type="radio" id="1_medAgr" name="1" value="1" />
-		<label class="resp_label" for="1_medAgr">Somewhat Agree</label class="resp_label">
-
-		<input class="resp" type="radio" id="1_strAgr" name="1" value="2" />
-		<label class="resp_label" for="1_strAgr">Strongly Agree</label class="resp_label">
-			
-	</div>
-	<div class="question_wrapper" id="2">
-
-		<h3>Question 2: Example question 2</h3>
-		<input class="resp" type="radio" id="2_strDis" name="2" value="-2" />
-		<label class="resp_label" for="2_strDis">Strongly Disagree</label class="resp_label">
-
-		<input class="resp" type="radio" id="2_medDis" name="2" value="-1" />
-		<label class="resp_label" for="2_medDis">Somewhat Disagree</label class="resp_label">
-
-		<input class="resp" type="radio" id="2_neu" name="2" value="0" />
-		<label class="resp_label" for="2_neu">Neutral</label class="resp_label">
-
-		<input class="resp" type="radio" id="2_medAgr" name="2" value="1" />
-		<label class="resp_label" for="2_medAgr">Somewhat Agree</label class="resp_label">
-
-		<input class="resp" type="radio" id="2_strAgr" name="2" value="2" />
-		<label class="resp_label" for="2_strAgr">Strongly Agree</label class="resp_label">
-			
-	</div>
-    <button type="submit">Submit</button>
-</form>
+	<h1>Welcome to the PST</h1>
+	<a href="/test">Take me to the test</a>
 </body>
