--- a/static/Template.html
+++ b/static/Template.html
@@ -13,25 +13,27 @@
 </head>
 
 <body>
-<form method="POST">
+<form method="POST" action="/finished">
+	<input type="text" name="username" />
+	<br /><br />
 	{{#each questions}}
-	<div class="question_wrapper" id="{{inc @index}}">
+	<div class="question_wrapper" id="Q{{inc @index}}">
 
 		<h3>Question {{inc @index}}: {{this}}</h3>
-		<input class="resp" type="radio" id="{{inc @index}}_strDis" name="{{inc @index}}" value="-2" />
-		<label class="resp_label" for="{{inc @index}}_strDis">Strongly Disagree</label class="resp_label">
+		<input class="resp" type="radio" id="Q{{inc @index}}_strDis" name="Q{{inc @index}}" value="-2" />
+		<label class="resp_label" for="Q{{inc @index}}_strDis">Strongly Disagree</label class="resp_label">
 
-		<input class="resp" type="radio" id="{{inc @index}}_medDis" name="{{inc @index}}" value="-1" />
-		<label class="resp_label" for="{{inc @index}}_medDis">Somewhat Disagree</label class="resp_label">
+		<input class="resp" type="radio" id="Q{{inc @index}}_medDis" name="Q{{inc @index}}" value="-1" />
+		<label class="resp_label" for="Q{{inc @index}}_medDis">Somewhat Disagree</label class="resp_label">
 
-		<input class="resp" type="radio" id="{{inc @index}}_neu" name="{{inc @index}}" value="0" />
-		<label class="resp_label" for="{{inc @index}}_neu">Neutral</label class="resp_label">
+		<input class="resp" type="radio" id="Q{{inc @index}}_neu" name="Q{{inc @index}}" value="0" />
+		<label class="resp_label" for="Q{{inc @index}}_neu">Neutral</label class="resp_label">
 
-		<input class="resp" type="radio" id="{{inc @index}}_medAgr" name="{{inc @index}}" value="1" />
-		<label class="resp_label" for="{{inc @index}}_medAgr">Somewhat Agree</label class="resp_label">
+		<input class="resp" type="radio" id="Q{{inc @index}}_medAgr" name="Q{{inc @index}}" value="1" />
+		<label class="resp_label" for="Q{{inc @index}}_medAgr">Somewhat Agree</label class="resp_label">
 
-		<input class="resp" type="radio" id="{{inc @index}}_strAgr" name="{{inc @index}}" value="2" />
-		<label class="resp_label" for="{{inc @index}}_strAgr">Strongly Agree</label class="resp_label">
+		<input class="resp" type="radio" id="Q{{inc @index}}_strAgr" name="Q{{inc @index}}" value="2" />
+		<label class="resp_label" for="Q{{inc @index}}_strAgr">Strongly Agree</label class="resp_label">
 			
 	</div>
 	{{/each}}
