--- a/Index.html
+++ b/Index.html
@@ -10,9 +10,10 @@
   <meta name="author" content="BHS IB">
 
   <link rel="stylesheet" href="css/Styles.css">
+  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-grid.min.css" />
 </head>
 
 <body>
-	<h1>Welcome to the PST</h1>
-	<a href="/test">Take me to the test</a>
+	<h1 class="impact">Find<br />Your<br />Match</h1>
+	<a href="/test" class="button">Take me to the test</a>
 </body>
