Fixed some compatibility issues with iOS/others, also an oversight in session management

--- a/Form.html
+++ b/Form.html
@@ -2,11 +2,12 @@
 
 <html lang="en">
 <head>
-	<meta charset="utf-8">
 
 	<title>Personality Test</title>
+	<meta charset="utf-8">
 	<meta name="description" content="Personality Test">
 	<meta name="author" content="BHS IB">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="bootstrap/dist/css/bootstrap-grid.min.css" />
 	<link rel="stylesheet" href="css/Styles.css">
