--- a/Index.html
+++ b/Index.html
@@ -3,17 +3,22 @@
 
 <html lang="en">
 <head>
-  <meta charset="utf-8">
 
   <title>Personality Test</title>
+  <meta charset="utf-8">
   <meta name="description" content="Personality Test">
   <meta name="author" content="BHS IB">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/Styles.css">
   <link rel="stylesheet" href="bootstrap/dist/css/bootstrap-grid.min.css" />
 </head>
 
 <body>
-	<h1 class="impact">Find<br />Your<br />Match</h1>
-	<a href="/test" class="button">Take me to the test</a>
+	<div class="container">
+		<div class="col-xs-12">
+			<h1 class="impact">Find<br />Your<br />Match</h1>
+			<a href="/test" class="button">Take me to the test</a>
+		</div>
+	</div>
 </body>
