--- a/static/Finished.html
+++ b/static/Finished.html
@@ -30,7 +30,14 @@
 						}
 						else
 						{
-							$("#indicator").html("An error occurred. Please take the test again.");
+							if(result.error)
+							{
+								$("#indicator").html(result.error);
+							}
+							else
+							{
+								$("#indicator").html("An unexpected error occurred. Please take the test again.");
+							}
 						}
 					},
 					"error": function()
